Gradle project updated.